# pyGPA

./: README.md  setup.cfg
gpa/: __init__.py  gpa.py
