[metadata]
name = pyGPA
version = attr: gpa.__version__
url = https://github.com/andremartinon/pyGPA
author = André Ricardo Fazanaro Martinon
author_email = martinon@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Gradient Pattern Analysis
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = False
packages =
    gpa
install_requires =
    numpy
    matplotlib
python_requires = >=3.6